# atlas

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  plan.md
.github/: copilot-instructions.md
.github/instructions/: architecture.instructions.md  design.instructions.md  keybind-authoring.instructions.md  multi-pane-refactor.instructions.md  performance.instructions.md  remote-backend-authoring.instructions.md  ui-composition.instructions.md
.github/skills/add-keybind/: SKILL.md
.github/skills/add-remote-backend/: SKILL.md
.github/skills/add-ui-surface/: SKILL.md
.github/skills/fix-flaky-test/: SKILL.md
.github/skills/resolve-slint-property-conflict/: SKILL.md
.github/skills/testing/: SKILL.md
.github/skills/write-benches/: SKILL.md
.github/workflows/: ci.yml  release.yml
assets/branding/: atlas.desktop  atlas.icns
assets/fonts/: README.md
assets/keymaps/: default.linux.toml  default.macos.toml  default.toml  default.windows.toml
assets/themes/: atlas-dark.toml  atlas-light.toml
assets/ui/: atlas.slint  pane-data.slint  theme.slint
assets/ui/components/: address-bar.slint  atlas-controls.slint  breadcrumbs.slint  bulk-rename.slint  command-palette.slint  conflict-modal.slint  connect-server.slint  ops-panel.slint  (+10 more)
crates/atlas-app/: Cargo.toml  build.rs
crates/atlas-app/src/: main.rs
crates/atlas-config/: Cargo.toml
crates/atlas-config/src/: defaults.rs  lib.rs  load.rs  paths.rs  save.rs  schema.rs  servers.rs  skeleton.toml  watcher.rs
crates/atlas-config/tests/: config_tests.rs
crates/atlas-core/: Cargo.toml
crates/atlas-core/src/: error.rs  lib.rs  location.rs  path.rs
crates/atlas-fs/: Cargo.toml
crates/atlas-fs/benches/: entry_footprint.rs  filter.rs  lister.rs  sort.rs  view_model.rs  view_model_notify.rs  view_model_reads.rs  view_model_watcher.rs  walker.rs
crates/atlas-fs/benches/common/: mod.rs
crates/atlas-fs/src/: entry.rs  filter.rs  lib.rs  lister.rs  sort.rs  view_model.rs  walker.rs  watched.rs
crates/atlas-fs/tests/: fs.rs  watched.rs
crates/atlas-index/: Cargo.toml
crates/atlas-index/src/: doc.rs  lib.rs  query.rs  reader.rs  schema.rs  stats.rs  writer.rs
crates/atlas-indexd/: Cargo.toml
crates/atlas-indexd/src/: cli.rs  daemon.rs  handler.rs  incremental.rs  ingest.rs  launchd.rs  lib.rs  main.rs  paths.rs  state.rs
crates/atlas-indexd/tests/: integration.rs
crates/atlas-ipc/: Cargo.toml
crates/atlas-ipc/src/: client.rs  codec.rs  error.rs  lib.rs  protocol.rs  server.rs  transport.rs
crates/atlas-ipc/tests/: ipc_tests.rs
crates/atlas-keymap/: Cargo.toml
crates/atlas-keymap/src/: action.rs  binding.rs  chord.rs  context.rs  defaults.rs  dispatcher.rs  keymap.rs  lib.rs  loader.rs
crates/atlas-ops/: Cargo.toml
crates/atlas-ops/benches/: copy.rs
crates/atlas-ops/src/: conflict.rs  execute.rs  lib.rs  op.rs  queue.rs  remote.rs  runtime.rs  undo.rs
crates/atlas-ops/src/primitives/: copy.rs  delete.rs  mkdir.rs  mod.rs  move_.rs  rename.rs
crates/atlas-ops/tests/: cross_backend.rs  ops_tests.rs
crates/atlas-remote/: Cargo.toml
crates/atlas-remote/src/: backend.rs  error.rs  host_key.rs  known_hosts.rs  lib.rs  opendal_vm.rs  pool.rs  retry.rs  runtime.rs  secrets.rs  stream.rs  walk.rs
crates/atlas-remote/src/vm/: common.rs  ftp.rs  mod.rs  s3.rs  sftp.rs  webdav.rs
crates/atlas-remote/tests/: cross_backend_stream.rs  ftp.rs  harness_smoke.rs  s3.rs  sftp.rs  webdav.rs
crates/atlas-remote/tests/common/: mock.rs  mod.rs
crates/atlas-search/: Cargo.toml
crates/atlas-search/benches/: fuzzy.rs
crates/atlas-search/src/: fuzzy.rs  index_client.rs  lib.rs  unified.rs
crates/atlas-search/src/content/: filter.rs  mod.rs  pattern.rs  result.rs  search.rs
crates/atlas-thumbs/: Cargo.toml
crates/atlas-thumbs/src/: cache.rs  decode.rs  error.rs  generate.rs  key.rs  lib.rs  workers.rs
crates/atlas-ui/: Cargo.toml  build.rs
crates/atlas-ui/src/: actions.rs  clipboard.rs  focus.rs  lib.rs  shell.rs  theme.rs
crates/atlas-ui/src/context/: capabilities.rs  mod.rs
crates/atlas-ui/src/models/: mod.rs  palette.rs  pane.rs  pane_state.rs  split.rs  status.rs  tab.rs  workspace.rs
crates/atlas-ui/src/navigation/: bookmarks.rs  controller.rs  history.rs  mod.rs
crates/atlas-ui/src/ops/: controller.rs  format.rs  mod.rs  models.rs
crates/atlas-ui/src/palette/: controller.rs  matcher.rs  mod.rs  source.rs
crates/atlas-ui/src/platform/: mod.rs  open_with.rs  titlebar_theme.rs
crates/atlas-ui/src/remote/: connect.rs  mod.rs  preview.rs  preview_watch.rs  resolve.rs
crates/atlas-ui/src/rename/: controller.rs  error.rs  mod.rs  preview.rs
crates/atlas-ui/src/rename_inline/: controller.rs  mod.rs  session.rs  validation.rs
crates/atlas-ui/src/search/: controller.rs  mod.rs  row.rs
crates/atlas-ui/src/theming/: color.rs  defaults.rs  icons.rs  loader.rs  mod.rs  tokens.rs  watcher.rs
crates/atlas-ui/src/views/: mod.rs  navigation.rs  selection.rs
crates/atlas-ui/src/views/details/: columns.rs  controller.rs  format.rs  mod.rs
crates/atlas-ui/src/views/gallery/: controller.rs  metadata.rs  mod.rs  thumbs.rs
crates/atlas-ui/src/views/grid/: controller.rs  mod.rs  thumbs.rs
crates/atlas-ui/src/views/miller/: column.rs  controller.rs  mod.rs
crates/atlas-ui/src/views/tree/: controller.rs  mod.rs  node.rs
crates/atlas-ui/tests/: font_bundle.rs  remote_back_forward.rs  remote_preview.rs  remote_write_back.rs
crates/atlas-ui/tests/common/: mod.rs
crates/atlas-watch/: Cargo.toml
docs/: architecture.md  contributing.md  developer-setup.md  keymap.md  multi-pane.md  performance.md
docs/perf/: README.md  audit-2026-07-03.md  baseline-2026-07-03.md  followups.md  results-2026-07-03.md  results-viewmodel-tranche-2026-07-04.md
tools/computer-use-mcp/: README.md  server.py
tools/mock-servers/: README.md  ftp_server.py  mock_common.py  pyproject.toml  requirements.txt  s3_server.py  sftp_server.py  webdav_server.py
tools/preview/: README.md  bulk-rename-preview.slint  conflict-preview.slint  palette-preview.slint  progress-preview.slint
(+21 files in other folders)
