[package]
name = "atlas-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
atlas-ui.workspace = true
slint.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
