[package]
name = "atlas-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
atlas-core.workspace = true
atlas-ui.workspace = true
atlas-search.workspace = true
atlas-fs.workspace = true
atlas-config.workspace = true
atlas-keymap.workspace = true
slint.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
crossbeam-channel.workspace = true
arc-swap.workspace = true
