[package]
name = "atlas-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
atlas-core.workspace = true

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
toml.workspace = true
toml_edit.workspace = true
parking_lot.workspace = true
arc-swap.workspace = true
directories.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
crossbeam-channel.workspace = true

[dev-dependencies]
tempfile = "3"
serial_test = "3"
