[package]
name = "atlas-fs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
atlas-core.workspace = true

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
ignore.workspace = true
walkdir.workspace = true
rayon.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
smallvec.workspace = true
serde.workspace = true

[dev-dependencies]
tokio = { workspace = true }
