[package]
name = "atlas-fs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
atlas-core.workspace = true
atlas-watch.workspace = true

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
ignore.workspace = true
walkdir.workspace = true
rayon.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
smallvec.workspace = true
serde.workspace = true
regex.workspace = true
globset = "0.4"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
crossbeam-channel.workspace = true
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "walker"
harness = false

[[bench]]
name = "lister"
harness = false

[[bench]]
name = "sort"
harness = false

[[bench]]
name = "filter"
harness = false

[[bench]]
name = "view_model"
harness = false
