[package]
name = "atlas-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
atlas-core.workspace = true

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tantivy.workspace = true
serde.workspace = true
parking_lot.workspace = true
walkdir.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile = "3"
