[package]
name = "atlas-indexd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "atlas-indexd"
path = "src/main.rs"

[lib]
name = "atlas_indexd"
path = "src/lib.rs"

[dependencies]
atlas-core.workspace = true
atlas-index.workspace = true
atlas-watch.workspace = true
atlas-ipc.workspace = true
atlas-fs.workspace = true
atlas-config.workspace = true

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
directories.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
arc-swap.workspace = true
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
clap = { version = "4", features = ["derive", "env"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
