[package]
name = "atlas-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
atlas-core.workspace = true

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
bincode.workspace = true
tokio.workspace = true
interprocess.workspace = true
futures.workspace = true
directories.workspace = true
parking_lot.workspace = true
crossbeam-channel.workspace = true
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
