[package]
name = "atlas-remote"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
atlas-core.workspace = true
atlas-fs.workspace = true

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
tokio = { workspace = true }
serde.workspace = true
serde_json.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
once_cell.workspace = true

opendal = { version = "0.53", default-features = false, features = [
    "services-memory",
    "services-s3",
    "services-sftp",
    "services-ftp",
    "services-webdav",
] }

keyring = { version = "3", default-features = false, features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
anyhow.workspace = true
libc = "0.2"
rand = "0.8"
