[package]
name = "atlas-search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
atlas-core.workspace = true
atlas-index.workspace = true
atlas-ipc.workspace = true

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
nucleo.workspace = true
grep.workspace = true
grep-regex.workspace = true
grep-searcher.workspace = true
ignore.workspace = true
crossbeam-channel.workspace = true
regex.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
