[package]
name = "atlas-thumbs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
atlas-core.workspace = true

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
image.workspace = true
resvg.workspace = true
rusqlite.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
ahash.workspace = true
directories.workspace = true
serde.workspace = true
tiny-skia = "0.11"
num_cpus = "1"

[dev-dependencies]
tempfile = "3"
