[package]
name = "atlas-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
atlas-core.workspace = true
slint.workspace = true
smallvec.workspace = true
parking_lot.workspace = true
directories.workspace = true

[build-dependencies]
slint-build.workspace = true
