[package]
name = "atlas-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
atlas-core.workspace = true
atlas-fs.workspace = true
atlas-config.workspace = true
atlas-keymap.workspace = true
slint.workspace = true
smallvec.workspace = true
parking_lot.workspace = true
directories.workspace = true
crossbeam-channel.workspace = true
tracing.workspace = true
arc-swap.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
nucleo.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[build-dependencies]
slint-build.workspace = true
