[package]
name = "atlas-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
atlas-core.workspace = true
atlas-fs.workspace = true
atlas-remote.workspace = true
atlas-config.workspace = true
atlas-keymap.workspace = true
atlas-thumbs.workspace = true
atlas-search.workspace = true
atlas-ops.workspace = true
atlas-watch.workspace = true
futures.workspace = true
image.workspace = true
ahash.workspace = true
num_cpus = "1"
slint.workspace = true
smallvec.workspace = true
parking_lot.workspace = true
directories.workspace = true
crossbeam-channel.workspace = true
tracing.workspace = true
arc-swap.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
nucleo.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
tokio.workspace = true
regex.workspace = true
anyhow.workspace = true
fs2 = "0.4"
arboard = "3"
open = "5"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
anyhow = { workspace = true }
libc = "0.2"
rand = "0.8"
atlas-core = { workspace = true }
atlas-remote = { workspace = true }
atlas-fs = { workspace = true }
atlas-config = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
parking_lot = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
# Used by `platform::titlebar_theme` to tint the OS title bar via
# `[NSApp setAppearance:]`. Both crates are already transitively pulled in
# by winit (via the Slint backend), so this adds no compile-time weight.
objc2 = "0.5"
objc2-foundation = "0.2"
objc2-app-kit = { version = "0.2", features = ["NSApplication", "NSAppearance", "NSResponder"] }

[target.'cfg(windows)'.dependencies]
# Used by `platform::titlebar_theme` to switch the Win32 title bar between
# light and dark via `DwmSetWindowAttribute(DWMWA_USE_IMMERSIVE_DARK_MODE)`.
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
slint-build.workspace = true
