[project]
name = "atlas-mock-servers"
version = "0.1.0"
description = "On-demand SFTP / FTP / WebDAV / S3 mock servers used by atlas-remote integration tests."
requires-python = ">=3.11"
dependencies = [
    "paramiko>=3.4,<4",
    "pyftpdlib>=1.5.10,<3",
    "wsgidav>=4.3,<5",
    "cheroot>=10,<11",
    "moto[server]>=5.0,<6",
    "boto3>=1.34,<2",
    "flask>=3,<4",
]

[tool.uv]
package = false
